login created vueside

--- a/package.json
+++ b/package.json
@@ -42,8 +42,5 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
-}
+    "last 2 version"
+    ]}
