--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,17 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1.8",
-        "ext-http": "*",
+        "php": "^8.0.2",
         "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/fortify": "^1.13",
         "laravel/framework": "^9.11",
-        "laravel/passport": "^10.4",
         "laravel/sanctum": "^3.0",
-        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest"
+        ,
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
