--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "webpack-livereload-plugin": "^3.0.2"
     },
     "dependencies": {
+        "livereload": "^0.9.3",
         "vue-router": "^4.0.16"
     }
 }
